frontend/test/should_fail/array_map_scalar.grg
test array_map(ref a:array<int>) {
	if {
		a.map<int>{value:int -> value * Math::pi()}.empty();
	}	
}
